<resources>
    <string name="app_name">Tubes_1718039</string>
    <string name="action_setting">Setting</string>
    <string name="action_setting_language">Language</string>
    <string name="key_setting_locale">setting_locale</string>
    <string name="label_setting_locale_summary">Change device language</string>
    <string name="label_setting_locale_title">Change language</string>
    <string name="label_posting">Posting</string>
    <string name="label_followers">Followers</string>
    <string name="label_follow">Follow</string>
    <string name="show_comments">Hi guys, this is my photo in Bali, I m on vacation with my family, I m enjoying a glass of tea</string>
    <string name="show_comments2">hello this is my first chance to be a tourist on the island of bali</string>
    <string name="show_comments3">Hello my name is ido eka wiranata I have a photography hobby of my favorite color in yellow</string>
    <string name="btn_follow">Follow</string>
    <string name="kampus">National Institute of Technology</string>
</resources>
