<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/background1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/gabungan"
            android:layout_width="410dp"
            android:layout_height="250dp"
            android:background="@drawable/idoback" />

        <!--        <ImageView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_alignParentTop="true"-->
        <!--            android:layout_alignParentStart="true"-->
        <!--            android:layout_marginStart="10dp"-->
        <!--            android:layout_marginTop="19dp"-->
        <!--            android:src="@drawable/ic_menu_white_24dp"/>-->

        <ImageView
            android:id="@+id/ivSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="17dp"
            android:src="@drawable/setting"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:background="#0FFFF4F8"
            android:text="IDO EKA WIRANATA"
            android:textColor="#FFEB3B"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kampus"
            android:textSize="17sp"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Malang,Indonesia"
            android:drawableStart="@drawable/ic_location_on_white_24dp"
            android:textSize="17sp"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text2"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:drawableStart="@drawable/ic_person_add_black_24dp"
            android:text="@string/label_follow"
            android:textColor="#FFEB3B"
            android:textSize="30sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="281dp"
            android:src="@drawable/ido"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="4dp" />

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/gabungan"
            android:weightSum="3"
            android:gravity="center_horizontal"
            android:layout_marginTop="55dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/Appr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="125K"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Appr"
                    android:layout_centerHorizontal="true"
                    android:text="@string/label_posting"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="100K"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/followers"
                    android:text="@string/label_followers"
                    android:textStyle="bold"
                    android:textSize="15dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="10K"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/following"
                    android:text="@string/label_follow"
                    android:textStyle="bold"
                    android:textSize="15dp"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutmail"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:layout_below="@id/layout2"
            android:layout_marginStart="32dp"
            android:layout_marginTop="11dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/pv_mail"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="#001F1C1C"
                android:src="@drawable/ido" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp">

                <TextView
                    android:id="@+id/tvphone2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/show_comments3"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutphone"
            android:layout_below="@id/layoutmail"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginStart="32dp"
            android:weightSum="2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/idoback" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp">

                <TextView
                    android:id="@+id/tvkomen4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/show_comments2"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutkomen"
            android:layout_below="@id/layoutphone"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginStart="32dp"
            android:weightSum="2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ido3" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvkomen"
                    android:text="@string/show_comments"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_follow"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutkomen"
            android:layout_marginTop="8dp"
            android:background="#0000DDFF"
            android:text="@string/btn_follow"
            android:textColor="#00FFFFFF"
            android:textColorHint="#00FFFFFF"
            android:textColorLink="#08FFFFFF"
            android:visibility="gone" />
        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/btn_follow"
            android:weightSum="5"
            android:gravity="center_horizontal"
            android:layout_marginTop="4dp">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="19dp"
                    android:src="@drawable/ic_home_black_24dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="19dp"
                    android:src="@drawable/ic_search_black_24dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="19dp"
                    android:src="@drawable/ic_add_circle_outline_black_24dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="19dp"
                    android:src="@drawable/ic_event_note_black_24dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="19dp"
                    android:src="@drawable/ic_account_circle_black_24dp"/>
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>


</ScrollView>